<resources>
    <string name="app_name">Codagram</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="to_details">To Details</string>
    <string name="screen_2">Screen 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt"></string>


    <string name="register_firstName_info">Vorname muss mindestens 3 Charakter beinhalten </string>
    <string name="register_lastName_info"> Nachname muss mindestens 3 Charakter beinhalten</string>
    <string name="register_nickName_info">Nickname muss mindestens 3 Charakter beinhalten</string>
    <string name="register_email_info">Deine Email muss mindestens 4 Charakter beinhalten</string>
    <string name="register_password_info">Dein Password muss mindestens 6 Charakter beinhalten</string>
    <string name="vorname">Vorname</string>
    <string name="NachName">Nachname</string>
    <string name="nickname">Nickname</string>
    <string name="email_adresse">Email-Adresse</string>
    <string name="passwort">Passwort</string>
    <string name="account_erstellen">Account Erstellen</string>
    <string name="cancel">ABBRECHEN</string>
    <string name="delete">LÖSCHEN</string>
    <string name="deletePost">Willst du deinen Post wirklich löschen?</string>
    <string name="postDeleteSnack">Dein Post wurde gelöscht</string>
    <string name="snackOnlyDeleteownPost">Du kannst nur deine eigenen Posts Löschen</string>
    <string name="alertDeleteOrEdit">Willst du das Gruppenfoto ändern oder löschen?</string>
    <string name="alertOnlyCreatorEdit">Du kannst nur als Ersteller der Gruppe das Foto bearbeiten</string>
    <string name="alertEdit">ÄNDERN</string>
    <string name="alertDelete">LÖSCHEN</string>
    <string name="snackOnlyCreatorCanDeleteMember">Du kannst nur als Ersteller der Gruppe Mitglieder entfernen</string>
    <string name="snackOnlyCreatorCanEditTitle">Du kannst nur als Ersteller den Gruppennamen ändern</string>
    <string name="alertCancel">Abbrechen</string>
    <string name="snackInviteUser">Du musst mindestens einen User einladen</string>
    <string name="snackGroupName">Bitte wähle einen Gruppennamen</string>
    <string name="snackUserRequired">Bitte einen User eingeben</string>
    <string name="snackRequireToPost">Bitte füge ein Foto zu deiner Story hinzu und wähle eine Gruppe aus</string>
    <string name="snackTagOneMember">Du musst mindestens eine Person taggen</string>
    <string name="snackUserSearch">Bitte einen User eingeben</string>
    <string name="snackGroupTitle">Bitte noch ein Titel angeben</string>
    <string name="snackDescription">Bitte füge eine Beschreibung hinzu</string>
    <string name="willst_du_deinen_account_l_schen">Willst du deinen Account löschen?</string>
    <string name="l_schen">Löschen</string>
    <string name="hochladen">Hochladen</string>
    <string name="speichern">speichern</string>
    <string name="zum_profilbild_bearbeiten_klicken">Zum Profilbild bearbeiten klicken</string>
    <string name="w_hle_eine_gruppe">Wähle eine Gruppe</string>
    <string name="asdasdasdasda_asdasdas_asdasdas_eqweqweqw_qweqweqwe_asdasdas_asdasdasdadsadaasdasdqweqweqweqweasd_as_dasda_asd_asdasdqw_qweqweq">asdasdasdasda asdasdas asdasdas eqweqweqw qweqweqwe asdasdas asdasdasdadsadaasdasdqweqweqweqweasd as dasda asd asdasdqw qweqweq</string>
    <string name="gruppe">Gruppe:</string>
    <string name="kommentare">Kommentare</string>
    <string name="schreibe_ein_kommentar">Schreibe ein Kommentar...</string>
    <string name="kommentar">Kommentar</string>
    <string name="point">...</string>
    <string name="suche_nach_usern">Suche nach Usern...</string>
    <string name="keine_ergebnisse">Keine Ergebnisse</string>
    <string name="erstelle">Erstelle</string>
    <string name="gruppename">Gruppename</string>
    <string name="ersteller">Ersteller @</string>
    <string name="mitglieder_der_gruppe">Mitglieder der Gruppe:</string>
    <string name="suche_nach_einem_user">Suche nach einem User ...</string>
    <string name="einladen">einladen</string>
    <string name="titel">Titel</string>
    <string name="markiere_deine_gruppenmitglieder">Markiere deine Gruppenmitglieder</string>
    <string name="poste">poste</string>
    <string name="gruppenEinladungen">Gruppeneinladungen</string>
    <string name="meine_gruppen">Meine Gruppen</string>
    <string name="gruppe_erstellt_von">Gruppe erstellt von</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="akzeptieren">Akzeptieren</string>
    <string name="ablehnen">Ablehnen</string>
    <string name="codagram">Codagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="jetzt_registrieren">Jetzt Registrieren</string>
    <string name="du_hast_noch_keinen_account">Du hast noch keinen Account?</string>
    <string name="user">user</string>
    <string name="ausgew_hlt">ausgewählt</string>
    <string name="update">Update</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="firstname">FirstName</string>
    <string name="username">userName</string>
    <string name="lastname">lastName</string>
    <string name="emails">email</string>
    <string name="snackDeleteMember">Mitglied wurde entfernt</string>
    <string name="snackGroupNames">Gruppenname wurde geändert</string>
    <string name="snackGroupImageDelete">\" Gruppenfoto wurde gelöscht\"</string>
    <string name="statusGroupRefresh">\" Gruppenfoto wurde aktualisiert\"</string>
    <string name="statusGroupDelete">Du hast die Gruppe verlassen</string>
    <string name="statusGroupCreate">\"Gruppe wurde erfolgreich erstellt, Bitte lade die Liste neu um das Bild anzuzeigen \"</string>
    <string name="statusError">Leider ist etwas schiefgelaufen, Bitte probiere es etwas später erneut</string>
    <string name="statusInviteUser">Ausgewählte User wurden zur Gruppe eingeladen</string>
    <string name="statusGroupInviteempty">Keine Gruppeneinladungen</string>
    <string name="statusDeleteComment">Kommentar wurde gelöscht</string>
    <string name="statusNoPosts">Leider hast du noch keine Posts</string>
    <string name="statusGroup">Ausgewählte Gruppe wird angezeigt</string>
    <string name="statusChangeGroupName">Gruppenname wurde erfolgreich geändert</string>
    <string name="statusGroupDeletes">Deine Gruppe wurde gelöscht</string>
    <string name="statusGroupMemberDelete">User wurde aus der Gruppe entfernt</string>
    <string name="snackGroupCreate">Du musst noch ein Gruppenfoto auswählen</string>
    <string name="statusRemovePost">Der ausgewählter Post wurde entfernt</string>
    <string name="likePost">Der Post wurde geliked</string>
    <string name="statusListLoad">Liste erfolgreich geladen</string>
    <string name="statusUserUpdate">Deine Profildaten wurden aktualisiert</string>
    <string name="updateImage">Dein Profilfoto wurde aktualisiert</string>
    <string name="statusDeletePhoto">Dein Profilbild wurde gelöscht</string>
    <string name="statusUserDelete">Dein Profil wurde gelöscht, Bitte starte die App neu um dich anzumelden</string>
    <string name="dialogDelteOwnProfile">Möchst du wirklich dein Account löschen?</string>
    <string name="snackMinCharakte">Bitte mindestens ein Zeichen schreiben</string>
    <string name="statusGroupInvite">Auf Gruppeneinladung geantwortet</string>
    <string name="snackUserRequireds">Bitte einen User eingeben</string>
    <string name="snackCancelled">Abgebrochen</string>
    <string name="alertText">"Möchst den folgenden User %s aus der Gruppe entfernen"</string>
    <string name="eventPostCreate">Post wurde erstellt</string>
    <string name="alertInputText">Eingabefeld darf nicht Leer sein</string>
    <string name="eventGroupCreated">Deine Gruppe wurde erstellt</string>
    <string name="eventNoGroups">Du hast derzeit keine Gruppen, bitte füge welche zu in dem auf den Button klickst</string>
    <string name="GroupPictureUpdate">Gruppenbild bearbeiten</string>
    <string name="alertAlert">Achtung</string>
    <string name="toastSizung">Sitzung abgelaufen</string>
    <string name="firstNameNotEmpty">Vorname darf nicht leer sein !</string>
    <string name="lastNameNotEmpty">Nachname darf nicht leer sein!</string>
    <string name="nickNameNotEmpty">Nickname darf nicht leer sein!</string>
    <string name="emailNotEmpty">Email darf nicht leer sein !</string>
    <string name="pwNotEmpty">Passwort darf nicht leer sein !</string>
    <string name="cancelled">abgebrochen</string>
    <string name="deleteOrEdit">Willst du das Bild ändern oder Löschen?</string>
    <string name="alertDeleteMemberOrGroup">Möchest du die folgende Gruppe %s wirklich löschen/verlassen?"</string>
    <string name="alertDeleteGroup">%s wurde gelöscht/verlassen"</string>
    <string name="eingeloggt_bleiben">Eingeloggt bleiben?</string>
    <string name="noch_keinen_account">Noch keinen Account?</string>


</resources>