<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.groupscreen.GroupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/groupImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_cloud_upload_24"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/groupImage"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft">

        <EditText
            android:id="@+id/etCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/point"
            android:textColorHint="#FF86FC"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="13dp"
            android:padding="1dp"
            android:textColor="#FF86FC"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:background="@android:color/transparent" />

    </androidx.cardview.widget.CardView>




    <EditText
        android:id="@+id/auto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="2dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:completionThreshold="1"
        android:hint="@string/suche_nach_usern"
        android:padding="7dp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/btnCreateGroup"
        app:layout_constraintTop_toBottomOf="@id/cardEdit"
        android:background="@drawable/search_design"
        tools:ignore="MissingConstraints"
        android:drawableStart="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/tvEmptyData"
        app:layout_constraintTop_toBottomOf="@id/auto"
        android:text="@string/keine_ergebnisse"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/btnCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_add_box_24"
        android:text="@string/erstelle"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/auto"
        app:layout_constraintTop_toBottomOf="@id/cardEdit" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResult"
            android:layout_width="0dp"
            android:scrollbars="vertical"
            android:layout_marginTop="15dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmptyData"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            tools:listitem="@layout/search_items"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>