<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loginscreen.LoginFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FF9D93"
        android:layout_height="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codagram"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:drawableRight="@drawable/ic_baseline_favoriteeee_24"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed"
            android:elevation="5dp"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/background2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FF86FC"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_star_48px"
            android:layout_gravity="center">
        </ImageView>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardViewTop"
        android:layout_marginTop="30dp"
        android:elevation="3dp"
        android:text="LOGIN"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cardViewTop"
        android:layout_above="@+id/background2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"

                    android:padding="10dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:hint="@string/email"
                        android:layout_margin="15dp"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="30sp"
                        android:layout_width="match_parent"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:inputType="text"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#2A000000"
                        android:layout_below="@+id/etEmail"/>

                    <EditText
                        android:id="@+id/etPassword"
                        android:hint="@string/password"
                        android:layout_margin="15dp"
                        android:layout_below="@id/view1"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="30sp"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>



            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/rlBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignTop="@id/cv"
                android:layout_marginRight="-30dp"
                android:layout_alignBottom="@+id/cv"
                android:layout_alignRight="@id/cv"
                android:elevation="10dp">

                <ImageButton
                    android:id="@+id/btnLogin"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_ui"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="50dp"
                android:layout_below="@+id/rlBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eingeloggt_bleiben"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/btnNewAccountInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/switch1"
                    android:text="@string/noch_keinen_account"
                    android:elevation="3dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/btnNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jetzt_registrieren"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toBottomOf="@id/switch1"
                    android:layout_marginTop="10dp"
                    android:elevation="3dp"
                    app:layout_constraintStart_toEndOf="@id/btnNewAccountInfo"
                    android:textColor="#FF86FC"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />



            </androidx.constraintlayout.widget.ConstraintLayout>




        </RelativeLayout>


    </ScrollView>



</RelativeLayout>